--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -214,16 +214,22 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="test.frag">
-      <Filter>Shaders\Fragment</Filter>
-    </None>
-    <None Include="test.vert">
-      <Filter>Shaders\Vertex</Filter>
-    </None>
     <None Include="background.vert">
       <Filter>Shaders\Vertex</Filter>
     </None>
     <None Include="background.frag">
+      <Filter>Shaders\Fragment</Filter>
+    </None>
+    <None Include="particle.frag">
+      <Filter>Shaders\Fragment</Filter>
+    </None>
+    <None Include="particle.vert">
+      <Filter>Shaders\Vertex</Filter>
+    </None>
+    <None Include="quad.vert">
+      <Filter>Shaders\Vertex</Filter>
+    </None>
+    <None Include="quad.frag">
       <Filter>Shaders\Fragment</Filter>
     </None>
   </ItemGroup>
