--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="RenderEntityFactory.cpp" />
     <ClCompile Include="SessionManager.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="VulkanAllocator.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="WorkerThreadPool.cpp" />
   </ItemGroup>
@@ -173,6 +174,7 @@
     <ClInclude Include="UniformBufferObject.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="VulkanAllocator.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WorkerThreadPool.h" />
   </ItemGroup>
