--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -125,8 +125,10 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CollisionChecker.cpp" />
+    <ClCompile Include="ConstStrings.cpp" />
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MessageQueue.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="QuadTree.cpp" />
@@ -146,9 +148,14 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CollisionChecker.h" />
     <ClInclude Include="ConcurrentVector.h" />
+    <ClInclude Include="ConstStrings.h" />
+    <ClInclude Include="EnumUtils.h" />
     <ClInclude Include="Environment.h" />
     <ClInclude Include="InstanceBufferObject.h" />
     <ClInclude Include="LinearQuad.h" />
+    <ClInclude Include="Message.h" />
+    <ClInclude Include="MessageQueue.h" />
+    <ClInclude Include="MessageType.h" />
     <ClInclude Include="MultiIntVector.h" />
     <ClInclude Include="NumberGenerator.h" />
     <ClInclude Include="PhysicsEngine.h" />
@@ -170,6 +177,7 @@
     <ClInclude Include="RenderTransform.h" />
     <ClInclude Include="SessionManager.h" />
     <ClInclude Include="Stats.h" />
+    <ClInclude Include="SystemComponent.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="UniformBufferObject.h" />
     <ClInclude Include="Utils.h" />
