Added swapchain recreation, some minor improvements remaining

--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="RenderEntityFactory.h" />
     <ClInclude Include="RenderDataInstanced.h" />
     <ClInclude Include="RenderDataSingular.h" />
+    <ClInclude Include="RenderEntityMeta.h" />
     <ClInclude Include="RenderMode.h" />
     <ClInclude Include="RenderTransform.h" />
     <ClInclude Include="SessionManager.h" />
