Implemented textures for instanced renderentities too

--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -176,7 +176,7 @@
     <ClInclude Include="RenderEntityCreateInfo.h" />
     <ClInclude Include="RenderEntityFactory.h" />
     <ClInclude Include="RenderDataInstanced.h" />
-    <ClInclude Include="RenderDataSingular.h" />
+    <ClInclude Include="RenderDataUniform.h" />
     <ClInclude Include="RenderEntityMeta.h" />
     <ClInclude Include="RenderMode.h" />
     <ClInclude Include="RenderTransform.h" />
