--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -150,6 +150,12 @@
     <ClCompile Include="SingleTimeCommand.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
+    <ClCompile Include="TextureGenerator.cpp">
+      <Filter>Source Files\TextureGen</Filter>
+    </ClCompile>
+    <ClCompile Include="PsTexture.cpp">
+      <Filter>Source Files\TextureGen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Environment.h">
@@ -288,6 +294,18 @@
       <Filter>Header Files\Graphics\RenderEntity\Data</Filter>
     </ClInclude>
     <ClInclude Include="SimplexNoise.h">
+      <Filter>Header Files\Graphics\TextureGen</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image_write.h">
+      <Filter>Header Files\STB</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureGenerator.h">
+      <Filter>Header Files\Graphics\TextureGen</Filter>
+    </ClInclude>
+    <ClInclude Include="PsTexture.h">
+      <Filter>Header Files\Graphics\TextureGen</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.h">
       <Filter>Header Files\Graphics\TextureGen</Filter>
     </ClInclude>
   </ItemGroup>
