--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="ConstStrings.cpp" />
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="ImageFactory.cpp" />
+    <ClCompile Include="EventEngine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MessageQueue.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="EnumUtils.h" />
     <ClInclude Include="Environment.h" />
     <ClInclude Include="ImageFactory.h" />
+    <ClInclude Include="EventEngine.h" />
     <ClInclude Include="InstanceBufferObject.h" />
     <ClInclude Include="LinearQuad.h" />
     <ClInclude Include="Message.h" />
