Remove environment, implemented CoreEngine, this is now the entry point of the application. Implemented EntityEngine and entities as replacement for the Environment

--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -126,11 +126,12 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CollisionChecker.cpp" />
     <ClCompile Include="ConstStrings.cpp" />
-    <ClCompile Include="Environment.cpp" />
+    <ClCompile Include="CoreEngine.cpp" />
+    <ClCompile Include="EntityEngine.cpp" />
     <ClCompile Include="ImageFactory.cpp" />
     <ClCompile Include="EventEngine.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MessageQueue.cpp" />
+    <ClCompile Include="MessageSystem.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="PsTexture.cpp" />
@@ -154,18 +155,27 @@
     <ClInclude Include="CollisionChecker.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="ConcurrentVector.h" />
+    <ClInclude Include="ConfigurationData.h" />
     <ClInclude Include="ConstStrings.h" />
+    <ClInclude Include="CoreEngine.h" />
+    <ClInclude Include="BaseEntity.h" />
+    <ClInclude Include="EntityType.h" />
+    <ClInclude Include="GameEntity.h" />
+    <ClInclude Include="ParticlesEntity.h" />
+    <ClInclude Include="TransformEntity.h" />
+    <ClInclude Include="WorldEntity.h" />
+    <ClInclude Include="EntityEngine.h" />
     <ClInclude Include="EnumUtils.h" />
-    <ClInclude Include="Environment.h" />
     <ClInclude Include="ImageFactory.h" />
     <ClInclude Include="EventEngine.h" />
     <ClInclude Include="InstanceBufferObject.h" />
     <ClInclude Include="LinearQuad.h" />
     <ClInclude Include="Message.h" />
-    <ClInclude Include="MessageQueue.h" />
+    <ClInclude Include="MessageSystem.h" />
     <ClInclude Include="MessageType.h" />
     <ClInclude Include="MultiIntVector.h" />
     <ClInclude Include="NumberGenerator.h" />
+    <ClInclude Include="PhysicsParticlesEntity.h" />
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="PsTexture.h" />
     <ClInclude Include="PsTuple.h" />
@@ -188,7 +198,6 @@
     <ClInclude Include="RenderDataUniform.h" />
     <ClInclude Include="RenderEntityMeta.h" />
     <ClInclude Include="RenderMode.h" />
-    <ClInclude Include="RenderTransform.h" />
     <ClInclude Include="SessionManager.h" />
     <ClInclude Include="SingleTimeCommand.h" />
     <ClInclude Include="Stats.h" />
