--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -82,18 +82,12 @@
     <Filter Include="Source Files\TextureGen">
       <UniqueIdentifier>{fc8e200f-8577-43e1-b8f2-5afaf1876fd4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Input">
-      <UniqueIdentifier>{c3379b48-76d9-45f1-bbe7-5a1cda674f79}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Input">
-      <UniqueIdentifier>{bdbb1bc2-c2ed-4ccb-856f-7663d1832420}</UniqueIdentifier>
+    <Filter Include="Header Files\Entities">
+      <UniqueIdentifier>{0fb1408b-402e-4029-968f-518f8cee100d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Environment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Timer.cpp">
@@ -144,9 +138,6 @@
     <ClCompile Include="VulkanAllocator.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="MessageQueue.cpp">
-      <Filter>Source Files\MessageSystem</Filter>
-    </ClCompile>
     <ClCompile Include="ConstStrings.cpp">
       <Filter>Source Files\Utils</Filter>
     </ClCompile>
@@ -165,11 +156,17 @@
     <ClCompile Include="EventEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CoreEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MessageSystem.cpp">
+      <Filter>Source Files\MessageSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="EntityEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Environment.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Timer.h">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
@@ -245,9 +242,6 @@
     <ClInclude Include="RenderDataInstanced.h">
       <Filter>Header Files\Graphics\RenderEntity\Data</Filter>
     </ClInclude>
-    <ClInclude Include="RenderTransform.h">
-      <Filter>Header Files\Graphics\RenderEntity\Data</Filter>
-    </ClInclude>
     <ClInclude Include="RenderEngineVulkanBackend.h">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
@@ -262,9 +256,6 @@
     </ClInclude>
     <ClInclude Include="VulkanAllocator.h">
       <Filter>Header Files\Graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="MessageQueue.h">
-      <Filter>Header Files\MessageSystem</Filter>
     </ClInclude>
     <ClInclude Include="SystemComponent.h">
       <Filter>Header Files\MessageSystem</Filter>
@@ -319,6 +310,39 @@
     </ClInclude>
     <ClInclude Include="EventEngine.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CoreEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MessageSystem.h">
+      <Filter>Header Files\MessageSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="ConfigurationData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EntityEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticlesEntity.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="WorldEntity.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseEntity.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformEntity.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEntity.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsParticlesEntity.h">
+      <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="EntityType.h">
+      <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
