--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="ConstStrings.cpp" />
     <ClCompile Include="CoreEngine.cpp" />
     <ClCompile Include="EntityEngine.cpp" />
+    <ClCompile Include="IdGenerator.cpp" />
     <ClCompile Include="ImageFactory.cpp" />
     <ClCompile Include="EventEngine.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -163,7 +164,9 @@
     <ClInclude Include="BaseEntity.h" />
     <ClInclude Include="EntityType.h" />
     <ClInclude Include="GameEntity.h" />
+    <ClInclude Include="IdGenerator.h" />
     <ClInclude Include="ParticlesEntity.h" />
+    <ClInclude Include="DebugQuadTreeEntity.h" />
     <ClInclude Include="SandboxSession.h" />
     <ClInclude Include="TransformEntity.h" />
     <ClInclude Include="WorldEntity.h" />
