--- a/ParticleStorm/ParticleStorm.vcxproj.filters
+++ b/ParticleStorm/ParticleStorm.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="SandBoxSession.cpp">
       <Filter>Source Files\SessionManagers</Filter>
     </ClCompile>
+    <ClCompile Include="IdGenerator.cpp">
+      <Filter>Source Files\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Timer.h">
@@ -358,6 +361,12 @@
     </ClInclude>
     <ClInclude Include="SandBoxSession.h">
       <Filter>Header Files\SessionManagers</Filter>
+    </ClInclude>
+    <ClInclude Include="IdGenerator.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugQuadTreeEntity.h">
+      <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
