--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MessageSystem.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
+    <ClCompile Include="PhysicsBenchmarkSession.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="PsTexture.cpp" />
     <ClCompile Include="QuadTree.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="IdGenerator.h" />
     <ClInclude Include="ParticlesEntity.h" />
     <ClInclude Include="DebugQuadTreeEntity.h" />
+    <ClInclude Include="PhysicsBenchmarkSession.h" />
     <ClInclude Include="SandboxSession.h" />
     <ClInclude Include="TransformEntity.h" />
     <ClInclude Include="WorldEntity.h" />
