GuiEninge: -Implemented a GUI engine with support for ImageButtons -Implemented a MainMenu Session which replaces the old commandline menu. -Various refactoring and bugfixes.

--- a/ParticleStorm/ParticleStorm.vcxproj
+++ b/ParticleStorm/ParticleStorm.vcxproj
@@ -129,10 +129,12 @@
     <ClCompile Include="CoreEngine.cpp" />
     <ClCompile Include="EntityEngine.cpp" />
     <ClCompile Include="GraphicsBenchmarkSession.cpp" />
+    <ClCompile Include="GuiEngine.cpp" />
     <ClCompile Include="IdGenerator.cpp" />
     <ClCompile Include="ImageFactory.cpp" />
     <ClCompile Include="EventEngine.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainMenuSession.cpp" />
     <ClCompile Include="MessageSystem.cpp" />
     <ClCompile Include="NumberGenerator.cpp" />
     <ClCompile Include="PhysicsBenchmarkSession.cpp" />
@@ -167,11 +169,16 @@
     <ClInclude Include="EntityType.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GraphicsBenchmarkSession.h" />
+    <ClInclude Include="GraphicsEntity.h" />
+    <ClInclude Include="GuiEngine.h" />
     <ClInclude Include="IdGenerator.h" />
+    <ClInclude Include="ImageButtonEntity.h" />
+    <ClInclude Include="MainMenuSession.h" />
     <ClInclude Include="ParticlesEntity.h" />
     <ClInclude Include="DebugQuadTreeEntity.h" />
     <ClInclude Include="PhysicsBenchmarkSession.h" />
     <ClInclude Include="SandboxSession.h" />
+    <ClInclude Include="SessionResult.h" />
     <ClInclude Include="TransformEntity.h" />
     <ClInclude Include="WorldEntity.h" />
     <ClInclude Include="EntityEngine.h" />
